Define an Action to Perform
Click button => set text to label

--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -32,6 +32,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c0W-AL-Rbd">
                                         <rect key="frame" x="0.0" y="70.5" width="151" height="30"/>
                                         <state key="normal" title="Set Default Label Text"/>
+                                        <connections>
+                                            <action selector="setDefaultLablText:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jrt-Ks-to1"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
